--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       rel="stylesheet"
     />
     <title>Ресторан</title>
-    <link rel="stylesheet" href="/style/style.css" />
+    <link rel="stylesheet" href="style/style.css" />
   </head>
   <body>
     <div class="header">
@@ -80,7 +80,7 @@
             <div class="card_image">
               <img src="/images/card.png" alt="" class="card_img" />
             </div>
-            <div class="card_title">Магическая <span >Атмосфера</span></div>
+            <div class="card_title">Магическая <span>Атмосфера</span></div>
             <div class="card_desc">
               В нашем заведении царит магическая атмосфера наполненная вкусными
               ароматами
