--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <div class="container">
         <div class="header_line">
           <div class="header_line_logo">
-            <img src="/images/logo.png" alt="" />
+            <img src="../images/logo.png" alt="" />
           </div>
 
           <div class="header_line_nav">
