--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       rel="stylesheet"
     />
     <title>Ресторан</title>
-    <link rel="stylesheet" href="style/style.css" />
+    <link rel="stylesheet" href="../restaurant/style/style.css" />
   </head>
   <body>
     <div class="header">
@@ -43,7 +43,7 @@
           <div class="phone">
             <div class="phone_holder">
               <div class="phone_img">
-                <img src="/images/phone.png" alt="" />
+                <img src="../restaurant/images/logo.png" alt="" />
               </div>
               <div class="number">
                 <a class="num" href="#">+999-888-76-54</a>
