--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       rel="stylesheet"
     />
     <title>Ресторан</title>
-    <link rel="stylesheet" href="../style/style.css" />
+    <link rel="stylesheet" href="../restaurant/style/style.css" />
   </head>
   <body>
     <div class="header">
