--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <div class="container">
         <div class="header_line">
           <div class="header_line_logo">
-            <img src="../images/logo.png" alt="" />
+            <img src="../restaurant/images/logo.png" alt="" />
           </div>
 
           <div class="header_line_nav">
@@ -36,14 +36,14 @@
 
           <div class="cart">
             <a href="#">
-              <img class="cart_img" src="/cart.png" alt="" />
+              <img class="cart_img" src="/restaurant/cart.png" alt="" />
             </a>
           </div>
 
           <div class="phone">
             <div class="phone_holder">
               <div class="phone_img">
-                <img src="/images/phone.png" alt="" />
+                <img src="/restaurant/images/phone.png" alt="" />
               </div>
               <div class="number">
                 <a class="num" href="#">+999-888-76-54</a>
