--- a/index.html
+++ b/index.html
@@ -36,14 +36,14 @@
 
           <div class="cart">
             <a href="#">
-              <img class="cart_img" src="/restaurant/cart.png" alt="" />
+              <img class="cart_img" src="../restaurant/cart.png" alt="" />
             </a>
           </div>
 
           <div class="phone">
             <div class="phone_holder">
               <div class="phone_img">
-                <img src="/restaurant/images/phone.png" alt="" />
+                <img src="../restaurant/images/phone.png" alt="" />
               </div>
               <div class="number">
                 <a class="num" href="#">+999-888-76-54</a>
@@ -78,7 +78,11 @@
         <div class="holder">
           <div class="card">
             <div class="card_image">
-              <img src="/images/card.png" alt="" class="card_img" />
+              <img
+                src="../restaurant/images/card.png"
+                alt=""
+                class="card_img"
+              />
             </div>
             <div class="card_title">Магическая <span>Атмосфера</span></div>
             <div class="card_desc">
@@ -89,7 +93,11 @@
 
           <div class="card">
             <div class="card_image">
-              <img src="/images/card.png" alt="" class="card_img" />
+              <img
+                src="../restaurant/images/card.png"
+                alt=""
+                class="card_img"
+              />
             </div>
             <div class="card_title">Лучшее качество <span>Еды</span></div>
             <div class="card_desc">Качество нашей Еды - отменное!</div>
@@ -97,7 +105,11 @@
 
           <div class="card">
             <div class="card_image">
-              <img src="/images/card.png" alt="" class="card_img" />
+              <img
+                src="../restaurant/images/card.png"
+                alt=""
+                class="card_img"
+              />
             </div>
             <div class="card_title">Недорогая <span>Еда</span></div>
             <div class="card_desc">
@@ -129,10 +141,26 @@
             </div>
           </div>
           <div class="history_images">
-            <img class="images_1" src="/images/Mask Group_1.png" alt="" />
-            <img class="images_2" src="/images/Mask Group_2.png" alt="" />
-            <img class="images_3" src="/images/Mask Group_3.png" alt="" />
-            <img class="images_4" src="/images/Mask Group_4.png" alt="" />
+            <img
+              class="images_1"
+              src="../restaurant/images/Mask Group_1.png"
+              alt=""
+            />
+            <img
+              class="images_2"
+              src="../restaurant/images/Mask Group_2.png"
+              alt=""
+            />
+            <img
+              class="images_3"
+              src="../restaurant/images/Mask Group_3.png"
+              alt=""
+            />
+            <img
+              class="images_4"
+              src="../restaurant/images/Mask Group_4.png"
+              alt=""
+            />
           </div>
         </div>
       </div>
@@ -164,19 +192,31 @@
         <div class="dishes_title">Наши <span>Блюда</span></div>
         <div class="burgers">
           <div class="burger_image">
-            <img src="/images/pizza.png" class="pizza" alt="" />
+            <img src="../restaurant/images/pizza.png" class="pizza" alt="" />
           </div>
           <div class="burgers_items">
             <div class="burger_item">
-              <img src="/images/burgers.png" class="burger" alt="" />
+              <img
+                src="../restaurant/images/burgers.png"
+                class="burger"
+                alt=""
+              />
               <div class="burger_text">Гамбургер мини -------- 220 ₽</div>
             </div>
             <div class="burger_item">
-              <img src="/images/burgers.png" class="burger" alt="" />
+              <img
+                src="../restaurant/images/burgers.png"
+                class="burger"
+                alt=""
+              />
               <div class="burger_text">Гамбургер мини -------- 220 ₽</div>
             </div>
             <div class="burger_item">
-              <img src="/images/burgers.png" class="burger" alt="" />
+              <img
+                src="../restaurant/images/burgers.png"
+                class="burger"
+                alt=""
+              />
               <div class="burger_text">Гамбургер мини -------- 220 ₽</div>
             </div>
           </div>
@@ -190,9 +230,17 @@
         <div class="menu_items">
           <div class="menu_item">
             <div class="menu_image">
-              <img src="/images/menu_item.png" class="menu_img" alt="" />
+              <img
+                src="../restaurant/images/menu_item.png"
+                class="menu_img"
+                alt=""
+              />
               <div class="price">
-                <img src="/images/price.png" class="price_image" alt="" />
+                <img
+                  src="../restaurant/images/price.png"
+                  class="price_image"
+                  alt=""
+                />
                 <div class="price_420">420</div>
               </div>
             </div>
@@ -209,9 +257,17 @@
 
           <div class="menu_item">
             <div class="menu_image">
-              <img src="/images/menu_item.png" class="menu_img" alt="" />
+              <img
+                src="../restaurant/images/menu_item.png"
+                class="menu_img"
+                alt=""
+              />
               <div class="price">
-                <img src="/images/price.png" class="price_image" alt="" />
+                <img
+                  src="../restaurant/images/price.png"
+                  class="price_image"
+                  alt=""
+                />
                 <div class="price_420">420</div>
               </div>
             </div>
@@ -228,9 +284,17 @@
 
           <div class="menu_item">
             <div class="menu_image">
-              <img src="/images/menu_item.png" class="menu_img" alt="" />
+              <img
+                src="../restaurant/images/menu_item.png"
+                class="menu_img"
+                alt=""
+              />
               <div class="price">
-                <img src="/images/price.png" class="price_image" alt="" />
+                <img
+                  src="../restaurant/images/price.png"
+                  class="price_image"
+                  alt=""
+                />
                 <div class="price_420">420</div>
               </div>
             </div>
@@ -259,7 +323,7 @@
           путешествующих в Санкт-Петербург!!!
         </div>
         <div class="coment_image">
-          <img src="/images/face.png" class="coment_img" alt="" />
+          <img src="../restaurant/images/face.png" class="coment_img" alt="" />
         </div>
         <div class="coment_type">Посетитель</div>
         <div class="coment_name">Николай</div>
@@ -271,20 +335,20 @@
         <div class="galery_content">
           <div class="galery_left">
             <div class="galery_up">
-              <img src="/images/10.png" alt="" />
+              <img src="../restaurant/images/10.png" alt="" />
             </div>
             <div class="galery_down">
-              <img src="/images/20.png" alt="" />
-              <img src="/images/30.png" alt="" />
+              <img src="../restaurant/images/20.png" alt="" />
+              <img src="../restaurant/images/30.png" alt="" />
             </div>
           </div>
           <div class="galery_right">
             <div class="galery_up">
-              <img src="/images/20.png" alt="" />
-              <img src="/images/30.png" alt="" />
+              <img src="../restaurant/images/20.png" alt="" />
+              <img src="../restaurant/images/30.png" alt="" />
             </div>
             <div class="galery_down">
-              <img src="/images/10.png" alt="" />
+              <img src="../restaurant/images/10.png" alt="" />
             </div>
           </div>
         </div>
@@ -294,15 +358,15 @@
       <div class="container">
         <div class="cook_title">Наши <span>Повара</span></div>
         <div class="cook_content">
-          <img src="/images/1_c.png" class="cook_img" alt="" />
-          <img src="/images/2_c.png" class="cook_img" alt="" />
-          <img src="/images/3_c.png" class="cook_img" alt="" />
+          <img src="../restaurant/images/1_c.png" class="cook_img" alt="" />
+          <img src="../restaurant/images/2_c.png" class="cook_img" alt="" />
+          <img src="../restaurant/images/3_c.png" class="cook_img" alt="" />
         </div>
       </div>
     </div>
     <div class="footer_image">
       <div class="footer_bg">
-        <img src="/images/footer_bg.png" alt="" />
+        <img src="../restaurant/images/footer_bg.png" alt="" />
       </div>
     </div>
     <div class="footer">Copyright 2022</div>
