--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@500;600;700;800&family=Tinos:wght@400;700&display=swap"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Cookie&family=Open+Sans:wght@500;600;700;800&family=Tinos:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
     <title>Ресторан</title>
     <link rel="stylesheet" href="../restaurant/style/style.css" />
   </head>
