--- a/index.html
+++ b/index.html
@@ -42,7 +42,11 @@
 
           <div class="cart">
             <a href="#">
-              <img class="cart_img" src="../restaurant/cart.png" alt="" />
+              <img
+                class="cart_img"
+                src="../restaurant/images/cart.png"
+                alt=""
+              />
             </a>
           </div>
 
