--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
     </div>
     <div class="footer_image">
       <div class="footer_bg">
-        <img src="../restaurant/images/footer_bg.png" alt="" />
+        <img class="footer_img" src="../restaurant/images/footer_bg.png" alt="" />
       </div>
     </div>
     <div class="footer">Copyright 2022</div>
