--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <div class="container">
         <div class="header__line">
           <div class="header__logo">
-            <img src="/images/logo.png" alt="" />
+            <img src="../restaurant/images/logo.png" alt="" />
           </div>
           <div class="nav">
             <a class="nav__item" href="#">ГЛАВНАЯ</a>
