--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
           </div>
           <div class="cart">
             <a href="#">
-              <img class="cart__img" src="/images/cart.png" alt="" />
+              <img class="cart__img" src="/restaurant/images/cart.png" alt="" />
             </a>
           </div>
           <div class="phone">
             <div class="phone__holder">
               <div class="phone__img">
-                <img src="/images/phone.png" alt="" />
+                <img src="/restaurant/images/phone.png" alt="" />
               </div>
               <div class="number">
                 <a class="num" href="#">+999-888-76-54</a>
@@ -63,7 +63,7 @@
           </div>
           <div class="burger__menu">
             <button id="burger">
-              <img src="/images/burger__img.png" alt="" />
+              <img src="/restaurant/images/burger__img.png" alt="" />
             </button>
             <div id="menu" class="burger__slide disp">
               <a class="nav__item block" href="#">ГЛАВНАЯ</a>
@@ -91,7 +91,7 @@
         <div class="cards__holder">
           <div class="card card__1">
             <div class="card__image">
-              <img class="card__img" src="/images/card.png" alt="" />
+              <img class="card__img" src="/restaurant/images/card.png" alt="" />
             </div>
             <div class="card__title">Магическая <span>Атмосфера</span></div>
             <div class="card__desc">
@@ -101,7 +101,7 @@
           </div>
           <div class="card card__2">
             <div class="card__image">
-              <img class="card__img" src="/images/card.png" alt="" />
+              <img class="card__img" src="/restaurant/images/card.png" alt="" />
             </div>
             <div class="card__title">Лучшее качество <span>Еды</span></div>
             <div class="card__desc">
@@ -111,7 +111,7 @@
           </div>
           <div class="card">
             <div class="card__image">
-              <img class="card__img" src="/images/card.png" alt="" />
+              <img class="card__img" src="/restaurant/images/card.png" alt="" />
             </div>
             <div class="card__title">Недорогая <span>Еда</span></div>
             <div class="card__desc">
@@ -144,10 +144,10 @@
             </div>
           </div>
           <div class="history__images">
-            <img class="images__1" src="/images/1.png" alt="" />
-            <img class="images__2" src="/images/2.png" alt="" />
-            <img class="images__3" src="/images/3.png" alt="" />
-            <img class="images__4" src="/images/4.png" alt="" />
+            <img class="images__1" src="/restaurant/images/1.png" alt="" />
+            <img class="images__2" src="/restaurant/images/2.png" alt="" />
+            <img class="images__3" src="/restaurant/images/3.png" alt="" />
+            <img class="images__4" src="/restaurant/images/4.png" alt="" />
           </div>
         </div>
       </div>
@@ -177,19 +177,19 @@
         <div class="dishes__title">Наши <span>Блюда</span></div>
         <div class="burgers">
           <div class="burgers__images">
-            <img src="/images/pizza.png" class="pizza" alt="" />
+            <img src="/restaurant/images/pizza.png" class="pizza" alt="" />
           </div>
           <div class="burgers__items">
             <div class="burger__item">
-              <img src="/images/burgers.png" class="burger" alt="" />
+              <img src="/restaurant/images/burgers.png" class="burger" alt="" />
               <div class="burger__text">Гамбургер мини ------- 220 ₽</div>
             </div>
             <div class="burger__item">
-              <img src="/images/burgers.png" class="burger" alt="" />
+              <img src="/restaurant/images/burgers.png" class="burger" alt="" />
               <div class="burger__text">Гамбургер мини ------- 220 ₽</div>
             </div>
             <div class="burger__item">
-              <img src="/images/burgers.png" class="burger" alt="" />
+              <img src="/restaurant/images/burgers.png" class="burger" alt="" />
               <div class="burger__text">Гамбургер мини ------- 220 ₽</div>
             </div>
           </div>
@@ -202,7 +202,7 @@
         <div class="menu__items">
           <div class="menu__item">
             <div class="menu__image">
-              <img src="/images/burger__i.png" class="menu__img" alt="" />
+              <img src="/restaurant/images/burger__i.png" class="menu__img" alt="" />
             </div>
             <div class="menu__text">Гамбургер макси</div>
             <div class="menu__subtext">Максимально толстый <br />слой мяса</div>
@@ -212,7 +212,7 @@
           </div>
           <div class="menu__item second">
             <div class="menu__image">
-              <img src="/images/burger__i.png" class="menu__img" alt="" />
+              <img src="/restaurant/images/burger__i.png" class="menu__img" alt="" />
             </div>
             <div class="menu__text">Гамбургер макси</div>
             <div class="menu__subtext">Максимально толстый <br />слой мяса</div>
@@ -222,7 +222,7 @@
           </div>
           <div class="menu__item third">
             <div class="menu__image">
-              <img src="/images/burger__i.png" class="menu__img" alt="" />
+              <img src="/restaurant/images/burger__i.png" class="menu__img" alt="" />
             </div>
             <div class="menu__text">Гамбургер макси</div>
             <div class="menu__subtext">Максимально толстый <br />слой мяса</div>
@@ -245,7 +245,7 @@
           путешествующих в Санкт-Петербург!!!
         </div>
         <div class="coment__image">
-          <img src="/images/face.png" class="coment__img" alt="" />
+          <img src="/restaurant/images/face.png" class="coment__img" alt="" />
         </div>
         <div class="coment__type">Посетитель</div>
         <div class="coment__name">Николай</div>
@@ -257,20 +257,20 @@
         <div class="gallery__content">
           <div class="gallery__left">
             <div class="gallery__up">
-              <img class="img__gallery hight" src="/images/10.png" alt="" />
+              <img class="img__gallery hight" src="/restaurant/images/10.png" alt="" />
             </div>
             <div class="gallery_down">
-              <img class="img__gallery" src="/images/20.png" alt="" />
-              <img class="img__gallery" src="/images/30.png" alt="" />
+              <img class="img__gallery" src="/restaurant/images/20.png" alt="" />
+              <img class="img__gallery" src="/restaurant/images/30.png" alt="" />
             </div>
           </div>
           <div class="gallery__right">
             <div class="gallery__up">
-              <img class="img__gallery" src="/images/20.png" alt="" />
-              <img class="img__gallery" src="/images/30.png" alt="" />
+              <img class="img__gallery" src="/restaurant/images/20.png" alt="" />
+              <img class="img__gallery" src="/restaurant/images/30.png" alt="" />
             </div>
             <div class="gallery_down">
-              <img class="img__gallery hight" src="/images/10.png" alt="" />
+              <img class="img__gallery hight" src="/restaurant/images/10.png" alt="" />
             </div>
           </div>
         </div>
@@ -281,14 +281,14 @@
         <div class="cook__title">Наши <span>Повара</span></div>
 
         <div class="cook__content">
-          <img src="/images/1_c.jpg" alt="" />
-          <img src="/images/2_c.jpg" alt="" />
-          <img src="/images/3_c.jpg" alt="" />
+          <img src="/restaurant/images/1_c.jpg" alt="" />
+          <img src="/restaurant/images/2_c.jpg" alt="" />
+          <img src="/restaurant/images/3_c.jpg" alt="" />
         </div>
       </div>
     </div>
     <div class="footer__bg"></div>
     <div class="footer">Copyright 2022</div>
-    <script src="/js/app.js"></script>
+    <script src="/restaurant/js/app.js"></script>
   </body>
 </html>
